--- a/src/components/Project/index.scss
+++ b/src/components/Project/index.scss
@@ -3,8 +3,7 @@ a {
     font-size: medium;
 }
 
-.portfolio-page {
-    overflow: scroll;
+.portfolio-page {    
     .text-zone {
         position: absolute;
         left: 10%;
